# mhit

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  main.c
incl/: mhps.c  mhps.h  universal.h
src/: main.c
src/incl/: ansi.c  ansi.h  bmp.c  bmp.h  mhps.c  mhps.h  universal.c  universal.h  util.c  util.h
src/incl/sdl-code/: base-sdl.c  base-sdl.h  gsv-blocks.c  gsv-blocks.h  gsv-icon.h  minif.c  minif.h  sdl-test.c  sdl-test.h
src/incl/sdl-code/disp-mode/: mhps-disp.c  mhps-disp.h
